--- a/todo-app/todo-backend/package.json
+++ b/todo-app/todo-backend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "MONGO_URL=mongodb://localhost:3456/the_database nodemon ./bin/www",
+    "debug": "DEBUG=express:* MONGO_URL=mongodb://localhost:3456/the_database nodemon ./bin/www"
   },
   "dependencies": {
     "cors": "^2.8.5",
