--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -9,3 +9,11 @@ services:
       MONGO_INITDB_DATABASE: the_database
     volumes:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+  redis:
+    image: redis
+    command:
+      ['redis-server', '--appendonly', 'yes']
+    ports:
+     - 6379:6379
+    volumes:
+      - ./redis_data:/data
