--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20 AS build-stage
+FROM node:20 AS test-stage
 
 WORKDIR /usr/src/app
 
@@ -6,10 +6,18 @@ COPY . .
 
 RUN npm ci
 
+RUN npm run test
+
+FROM test-stage AS build-stage
+
+#WORKDIR /usr/src/app
+
+COPY --from=test-stage . .
+
 ENV VITE_BACKEND_URL="http://localhost:3000"
 
 RUN npm run build
 
-FROM nginx:1.25-alpine
+FROM nginx:1.25-alpine AS serve-stage
 
 COPY --from=build-stage /usr/src/app/dist /usr/share/nginx/html
