--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -10,14 +10,10 @@ RUN npm run test
 
 FROM test-stage AS build-stage
 
-#WORKDIR /usr/src/app
-
-COPY --from=test-stage . .
-
 ENV VITE_BACKEND_URL="http://localhost:3000"
 
 RUN npm run build
 
 FROM nginx:1.25-alpine AS serve-stage
 
-COPY --from=build-stage . /usr/share/nginx/html
+COPY --from=build-stage /usr/src/app/dist /usr/share/nginx/html
