--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -1,6 +1,17 @@
 services:
+  app:
+    image: todo-back-dev
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    volumes:
+      - ./:/usr/src/app
+    environment:
+      - REDIS_URL=redis://redis:6379
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
   mongo:
     image: mongo
+    attach: false
     ports:
       - 3456:27017
     environment:
@@ -10,6 +21,7 @@ services:
     volumes:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
   redis:
+    attach: false
     image: redis
     command:
       ['redis-server', '--appendonly', 'yes']
@@ -17,3 +29,5 @@ services:
      - 6379:6379
     volumes:
       - ./redis_data:/data
+  debug-helper:
+    image: busybox
