--- a/todo-app/todo-frontend/docker-compose.dev.yml
+++ b/todo-app/todo-frontend/docker-compose.dev.yml
@@ -3,9 +3,18 @@ services:
     image: todo-front-dev
     build:
       context: .
-      dockerfile: dev.dockerfile
+      dockerfile: dev.Dockerfile
     volumes:
       - ./:/usr/src/app
     ports:
       - 5173:5173
     container_name: todo-front-dev
+  nginx:
+    image: nginx:1.20.1
+    volumes:
+      - ./nginx.dev.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - 8080:80
+    container_name: reverse-proxy
+    depends_on:
+      - app
